<resources>
    <!-- Bottom Navigation string -->
    <string name="bottomnav_main">메인</string>
    <string name="bottomnav_search">검색</string>
    <string name="bottomnav_wallet">지갑</string>
    <string name="bottomnav_more">더보기</string>

    <!-- On Boarding strign -->
    <string name="onboarding1_1_1">메인페이지에서</string>
    <string name="onboarding1_1_2">내 자산과 주식레벨을</string>
    <string name="onboarding1_1_3">볼 수 있고</string>

    <string name="onboarding1_2_1">검색페이지</string>
    <string name="onboarding1_2_2">를 눌러</string>
    <string name="onboarding1_2_3">원하는 주식을 찾으세요</string>

    <string name="onboarding2_1_1">원하는 주식이</string>
    <string name="onboarding2_1_2">현재 원하는 가격이라면</string>
    <string name="onboarding2_1_3">매수</string>
    <string name="onboarding2_1_3_2">를 눌러 원하는 만큼 사고</string>

    <string name="onboarding2_2_1">샀던 가격보다 오르면</string>
    <string name="onboarding2_2_2">매도</string>
    <string name="onboarding2_2_2_2">를 눌러서 팔면</string>
    <string name="onboarding2_2_3">차액을 벌 수 있어요</string>

    <!-- Graph, selling, buying string -->
    <string name="app_name">Damda</string>
    <string name="division">코스피</string>
    <string name="stock_code">0</string>
    <string name="stock_name">GS</string>
    <string name="stock_money">12,345</string>
    <string name="increase_money">▲ 1,000</string>
    <string name="increase_rate">+3.3</string>
    <string name="percent">%</string>
    <string name="money_unit">원</string>
    <string name="left_parentheses">(</string>
    <string name="right_parentheses">)</string>
    <string name="day">1일</string>
    <string name="one_week">1주일</string>
    <string name="one_month">1개월</string>
    <string name="three_month">3개월</string>
    <string name="one_year">1년</string>
    <string name="buying">매수</string>
    <string name="selling">매도</string>
    <string name="recent">현재가</string>
    <string name="recent_money">0</string>
    <string name="two_stock">0</string>
    <string name="stock_unit">주</string>
    <string name="total">총</string>
    <string name="total_money">0</string>
    <string name="buying_money">0</string>
    <string name="lack">부족</string>
    <string name="max_buying">최대로 매수</string>
    <string name="all_delete">전체삭제</string>
    <string name="do_buying">매수하기</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="result_money">+600,000</string>
    <string name="max_selling">최대로 매도</string>
    <string name="do_selling">매도하기</string>
    <string name="recheck">다시 한번 확인해주세요</string>
    <string name="cancel">취소</string>
    <string name="chart">Chart</string>
    <string name="EmptyImage">이미지가 열리지 않습니다.</string>
    <string name="marker_stock_date">2021/05/21 11:30</string>
    <string name="marker_stock_time">13:58</string>
    <string name="marker_stock_money">12,000원</string>

    <!-- Empty String -->
    <string name="app_nonestock">보유종목이 없어요</string>
    <string name="app_nonestockadvice">검색탭으로 주식을 찾아봐요</string>
    <!-- Main String -->
    <string name="app_hint">hint</string>
    <string name="main_totasset">총 자산</string>
    <string name="main_totassetmoney">12,000,000,000,000원</string>
    <string name="main_mystatus">주식초보 53일차</string>
    <string name="main_nickname">닉네임6글자</string>
    <string name="main_plusbutton">+</string>
    <string name="main_stockname">안녕안녕나는바보야하하하하하하하하</string>
    <string name="main_markettype">코스피</string>
    <string name="main_stockcode">00000</string>
    <string name="main_stockprice">5000원</string>
    <string name="main_stocktotprice">10,000원(2주)</string>
    <string name="main_stockpercent">+50.00%</string>
    <string name="app_noneinterest">관심종목이 없어요</string>
    <string name="app_noneinterestadvice">검색탭을 통해 관심있는 주식을 담아봐요</string>
    <string name="main_character">캐릭터</string>


    <!-- Calendar string -->
    <string name="calendar_plus">전일 대비 수익률 +5% 이상</string>
    <string name="calendar_zero">전일 대비 수익률 -5% ~ +5%</string>
    <string name="calendar_minus">전일 대비 수익률 -5% 이하</string>
    <string name="calendar_exp">하루마다 수익을 나타내는 캘린더입니다</string>

    <!-- Wallet string -->
    <string name="wallet_transcontent">체결가 30,000원(1950주)</string>
    <string name="wallet_transtime">12:31</string>
    <string name="wallet_transday">21/5/6(수)</string>
    <string name="wallet_transtype">매수</string>
    <string name="wallet_vallos">평가손익</string>
    <string name="wallet_vallossmoney">+5,000원</string>
    <string name="wallet_mystockasset">주식</string>
    <string name="wallet_mystockassetmoney">10,000,000원</string>
    <string name="wallet_mydepositasset">예수금</string>
    <string name="wallet_totasset">총 자산</string>
    <string name="wallet_totassetmoney">12,000,000원</string>
    <string name="wallet_nonetransaction">거래내역이 없어요</string>
    <string name="wallet_nonetransactionadvice">이번 달의 거래를 시작해보세요</string>
    <string name="wallet_filterall">전체</string>
    <string name="wallet_filterbuy">매수</string>
    <string name="wallet_filtersell">매도</string>


    <!--  Sign string.  -->
    <string name="sign_email">이메일</string>
    <string name="sign_password">비밀번호</string>
    <string name="sign_sign_in">로그인</string>
    <string name="sign_sign_up">회원가입하기</string>
    <string name="sign_comment">담다가 처음이신가요?</string>
    <string name="sign_email_hint">이메일을 입력해주세요</string>
    <string name="sign_password_hint">비밀번호를 입력해주세요</string>
    <string name="sign_logo">로고</string>
    <string name="sign_check">중복확인</string>
    <string name="sign_check_message_1">중복확인을 해주세요</string>
    <string name="sign_check_message_2">사용가능한 이메일입니다</string>
    <string name="sign_password_check">비밀번호 확인</string>
    <string name="sign_nickname">닉네임 (6자 이내)</string>
    <string name="sign_password_check_hint">비밀번호 확인을 해주세요</string>
    <string name="sign_nickname_hint">닉네임을 입력해주세요</string>

    <!--  Search string.  -->
    <string name="search_search_icon">검색 아이콘</string>
    <string name="search_empty_result">해당종목이 없어요</string>
    <string name="search_another_word">다른 키워드를 검색해주세요</string>
    <string name="search_high_stock">비싼 주식\nTOP 100</string>
    <string name="search_low_stock">저렴한 주식\nTOP 100</string>
    <string name="search_favorite_stock">많은 사람들이\n관심 있어하는 주식</string>
    <string name="search_coffee_stock">커피 한 잔</string>
    <string name="search_chicken_stock">치킨 한 마리</string>
    <string name="search_giftcard_stock">상품권 한장</string>
    <string name="search_gift_stock">비싼 선물</string>
    <string name="search_stock_subtitle">값으로 살 수 있는 주식</string>
    <string name="search_price_300000">30만원대</string>
    <string name="search_price_100000">10만원대</string>
    <string name="search_price_20000">2만원대</string>
    <string name="search_price_5000">4-5천원대</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>