<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_tutorial_secondline"
    >

    <TextView
        android:id="@+id/txtview_onboarding2_1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Medium"
        android:text="@string/onboarding2_1_1"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32dp"
        />
    <TextView
        android:id="@+id/txtview_onboarding2_1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Medium"
        android:text="@string/onboarding2_1_2"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_1_1"
        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding2_1_1"
        />
    <TextView
        android:id="@+id/txtview_onboarding2_1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Bold"
        android:text="@string/onboarding2_1_3"
        android:textColor="@color/pastel_red"
        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding2_1_1"
        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_1_2"
        />
    <TextView
        android:id="@+id/txtview_onboarding2_1_3_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Medium"
        android:text="@string/onboarding2_1_3_2"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_1_2"
        app:layout_constraintStart_toEndOf="@+id/txtview_onboarding2_1_3"
        />

    <TextView
        android:id="@+id/txtview_onboarding2_2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Bold"
        android:text="@string/onboarding2_2_1"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_1_3_2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        />
    <TextView
        android:id="@+id/txtview_onboarding2_2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Bold"
        android:text="@string/onboarding2_2_2"
        android:textColor="@color/dark_sky_blue"
        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_2_1"
        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding2_2_1"
        />
    <TextView
        android:id="@+id/txtview_onboarding2_2_2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Medium"
        android:text="@string/onboarding2_2_2_2"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/txtview_onboarding2_2_2"
        app:layout_constraintStart_toEndOf="@+id/txtview_onboarding2_2_2"
        />
    <TextView
        android:id="@+id/txtview_onboarding2_2_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Medium"
        android:text="@string/onboarding2_2_3"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_2_2"
        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding2_2_2"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding2_2_3"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="120dp"
        android:src="@drawable/img_tutorial_second"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/onboarding2_2_1"
        />
</androidx.constraintlayout.widget.ConstraintLayout>