<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_dialog_util_selling"
        tools:context=".util.UtilDialog">


        <TextView
            android:id="@+id/text_view_recheck"
            style="@style/Warm_grey_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recheck"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_stock_name"
            style="@style/Black_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:layout_marginLeft="98dp"
            android:layout_marginTop="8dp"
            android:text="@string/stock_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_recheck" />

        <TextView
            android:id="@+id/text_view_two_stock"
            style="@style/Black_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/two_stock"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_stock_name"
            app:layout_constraintTop_toBottomOf="@+id/text_view_recheck" />

        <TextView
            android:id="@+id/text_view_stock_unit"
            style="@style/Black_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/stock_unit"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_two_stock"
            app:layout_constraintTop_toBottomOf="@+id/text_view_recheck" />

        <TextView
            android:id="@+id/text_view_total"
            style="@style/Black_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="8dp"
            android:text="@string/total"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />

        <TextView
            android:id="@+id/text_view_total_money"
            style="@style/Black_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/total_money"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_total"
            app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />

        <TextView
            android:id="@+id/text_view_money_unit"
            style="@style/Black_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/money_unit"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_total_money"
            app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />

        <TextView
            android:id="@+id/text_view_left_parentheses"
            style="@style/Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/left_parentheses"
            android:textColor="@color/buyingColor"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_money_unit"
            app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />

        <TextView
            android:id="@+id/text_view_result_money"
            style="@style/Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/result_money"
            android:textColor="@color/buyingColor"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_left_parentheses"
            app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />

        <TextView
            android:id="@+id/text_view_right_parentheses"
            style="@style/Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/right_parentheses"
            android:textColor="@color/buyingColor"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/text_view_result_money"
            app:layout_constraintTop_toBottomOf="@+id/text_view_stock_name" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="84dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            style="@style/White_Bold"
            android:textSize="20sp"
            android:background="@drawable/bg_cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_total_money" />

        <Button
            android:id="@+id/button_selling"
            style="@style/White_Bold"
            android:layout_width="172dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_buying_button"
            android:text="@string/selling"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_cancel"
            app:layout_constraintTop_toBottomOf="@+id/text_view_total_money" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
