<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/img_tutorial_firstline"
    >
    <ImageView
        android:id="@+id/imgview_onboarding1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/img_tutorial_first"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/onboarding1_1_2"
        />
    <TextView
        android:id="@+id/txtview_onboarding1_1_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imgview_onboarding1"
        style="@style/Medium"
        android:text="@string/onboarding1_1_1"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        />
    <TextView
        android:id="@+id/txtview_onboarding1_1_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding1_1_1"
        style="@style/Bold"
        android:text="@string/onboarding1_1_2"
        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding1_1_1"
        android:textColor="@color/dusty_orange"
        />
    <TextView
        android:id="@+id/txtview_onboarding1_1_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtview_onboarding1_1_2"
        style="@style/Medium"
        android:text="@string/onboarding1_1_3"
        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding1_1_2"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/txtview_onboarding1_2_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/txtview_onboarding1_2_3"
        style="@style/Bold"
        android:text="@string/onboarding1_2_1"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/txtview_onboarding1_2_3"
        />
    <TextView
        android:id="@+id/txtview_onboarding1_2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Medium"
        android:text="@string/onboarding1_2_2"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/txtview_onboarding1_2_1"
        app:layout_constraintTop_toTopOf="@+id/txtview_onboarding1_2_1"

        />
    <TextView
        android:id="@+id/txtview_onboarding1_2_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding1_2_3"
        style="@style/Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>